# camera_lower_leg_tracking

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
include/: pcl_types.h
launch/: feet_detection.launch  toe_detection.launch
src/: feet_detection_node.cpp  fix_foot_axis.cpp  toe_detection_node.cpp
