<?xml version="1.0"?>
<package format="2">
  <name>camera_lower_leg_tracking</name>
  <version>0.0.1</version>
  <description>The package for tracking of lower legs of a user in Robotrainer scenario</description>

  <maintainer email="denis.stogl@kit.edu">Denis Štogl</maintainer>
  <maintainer email="p.pelcz@icloud.com">Philip Pelz</maintainer>

  <license>IPR-Licence</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>geometry_msgs</depend>
  <depend>iirob_filters</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
         <cpp cflags="-I${prefix}/srv/cpp"/>
  </export>
</package>
